// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLinedRulesMenuItems should render the first linked rules with left icon and does not apply the css if the length is 1 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="euiContextMenuItem css-0"
        data-test-subj="generateLinedRulesMenuItemsTestActionItem1a2b3c"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            <div
              class="euiFlexGroup css-5zp1nn"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                data-test-subj="generateLinedRulesMenuItemsTestLeftIcon"
              >
                <span
                  data-euiicon-type="check"
                />
              </div>
              <div
                class="euiFlexItem emotion-EuiFlexItem"
              >
                <div
                  data-test-subj="securityLinkAnchorComponent"
                >
                  <a
                    href="1a2b3c"
                  >
                    Simple Rule Query
                  </a>
                </div>
              </div>
            </div>
          </span>
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="euiContextMenuItem css-0"
      data-test-subj="generateLinedRulesMenuItemsTestActionItem1a2b3c"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          <div
            class="euiFlexGroup css-5zp1nn"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
              data-test-subj="generateLinedRulesMenuItemsTestLeftIcon"
            >
              <span
                data-euiicon-type="check"
              />
            </div>
            <div
              class="euiFlexItem emotion-EuiFlexItem"
            >
              <div
                data-test-subj="securityLinkAnchorComponent"
              >
                <a
                  href="1a2b3c"
                >
                  Simple Rule Query
                </a>
              </div>
            </div>
          </div>
        </span>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`generateLinedRulesMenuItems should render the second linked rule and apply the css when the length is > 1 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="euiContextMenuItem css-es0s2t"
        data-test-subj="generateLinedRulesMenuItemsTestActionItem2a2b3c"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            <div
              class="euiFlexGroup css-5zp1nn"
            >
              <div
                class="euiFlexItem emotion-EuiFlexItem"
              >
                <div
                  data-test-subj="securityLinkAnchorComponent"
                >
                  <a
                    href="2a2b3c"
                  >
                    Simple Rule Query 2
                  </a>
                </div>
              </div>
            </div>
          </span>
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="euiContextMenuItem css-es0s2t"
      data-test-subj="generateLinedRulesMenuItemsTestActionItem2a2b3c"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          <div
            class="euiFlexGroup css-5zp1nn"
          >
            <div
              class="euiFlexItem emotion-EuiFlexItem"
            >
              <div
                data-test-subj="securityLinkAnchorComponent"
              >
                <a
                  href="2a2b3c"
                >
                  Simple Rule Query 2
                </a>
              </div>
            </div>
          </div>
        </span>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
